add pyramid sample

--- a/src/app/shared/components/Layout/Header/header.component.pug
+++ b/src/app/shared/components/Layout/Header/header.component.pug
@@ -3,8 +3,9 @@ Fragment
   nav.navbar.navbar-expand-md(className='{cx(styles.root, ...navbarClass)}')
     .container
       a.navbar-brand(href='#')
-        img(src='{flagKor}')
-        | 대한민국 인구 피라미드
+        //- img(src='{flagKor}')
+        //- | 대한민국 인구 피라미드
+        | Navbar
         //- small.collapse.navbar-collapse 1960 ~ 2065
       .collapse.navbar-collapse
         ul.navbar-nav.ml-auto
