--- a/src/app/screens/Home/home.screen.pug
+++ b/src/app/screens/Home/home.screen.pug
@@ -6,6 +6,7 @@ div(className='{styles.root}')
       
       //- .container(ref='{clientRef}')
     .container
+      Pyramid(year='{2018}')
 
 
       //- .row
