--- a/src/app/shared/components/Layout/Header/header.component.scss
+++ b/src/app/shared/components/Layout/Header/header.component.scss
@@ -4,12 +4,12 @@
   position: relative;
   z-index: 10;
   &:global(.navbar) {
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+    // box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
     background: rgba(0, 0, 0, .1);
     :global(.navbar-brand) {
       font-size: 1.75rem;
-      height: 40px;
-      line-height: 45px;
+      height: 37px;
+      line-height: 42px;
       padding-top: 0;
       padding-bottom: 0;
       img {
