--- a/src/app/shared/components/Pyramid/pyramid.component.scss
+++ b/src/app/shared/components/Pyramid/pyramid.component.scss
@@ -1,6 +1,12 @@
 .root {
   position: relative;
   font-weight: 700;
+  // font-family: Montserrat, 'Yeon Sung';
+  // font-family: Montserrat, 'Stylish';
+  font-family: 'Stylish';
+  // font-family: 'Yeon Sung';
+  // font-family: 'Cute Font';
+  // @import url('https://fonts.googleapis.com/css?family=Cute+Font|Jua|Stylish|Yeon+Sung');
   img {
     position: absolute;
     top: 0;
