--- a/src/app/shared/styles/common.scss
+++ b/src/app/shared/styles/common.scss
@@ -4,6 +4,7 @@
 @import '../../../../node_modules/font-awesome/css/font-awesome.css';
 @import url('https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800,900');
 @import url('https://fonts.googleapis.com/css?family=Black+Han+Sans:400');
+@import url('https://fonts.googleapis.com/css?family=Cute+Font|Jua|Stylish|Yeon+Sung');
 
 // @import 'bootstrap/bootstrap';
 
@@ -17,5 +18,7 @@ body {
 
 body {
   font-family: Montserrat, 'Black Han Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: 'Yeon Sung';
+  font-family: Stylish;
   font-size: 14px;
 }
