--- a/src/app/shared/components/Pyramid/pyramid.component.pug
+++ b/src/app/shared/components/Pyramid/pyramid.component.pug
@@ -1,23 +1,8 @@
 // @import .scss => styles
 div(className='{styles.root}')
-  //- h1 pyramid
-  //- center
-  //- h1 {maxCount}, {JSON.stringify(_maxCount)}
-  //- pre {JSON.stringify(this.state.average, null, 2)}
-  //- img(src='{imgSrc}' width="100%")
-  svg(width='100%', viewBox='{"0 0 " + width + " " + height}',
-    xmlns='http://www.w3.org/2000/svg')
+  img(src='{imgSrc}' width="100%")
+  svg(width='100%', viewBox='{viewBox}', xmlns='http://www.w3.org/2000/svg')
 
-    //- {
-    //-   "men": {
-    //-     "y": 690.6,
-    //-     "text": 22.4
-    //-   },
-    //-   "women": {
-    //-     "y": 682.8,
-    //-     "text": 23.7
-    //-   }
-    //- }
 
 
 
@@ -41,10 +26,7 @@ div(className='{styles.root}')
             textAnchor="middle"
             letterSpacing='2')
             | {eee.text.text}
-      //- path(@if='xAxis'
-        d='{xAxis.tickR.d}', stroke='black')
 
-    //- circle(cx='50', cy='50', r='40', stroke='blue', fill='lightblue')
     g
 
 
@@ -56,13 +38,7 @@ div(className='{styles.root}')
         alignmentBaseline="middle"
         ) {char}
         
-      //- text(x='{width / 2}', y='{115}'
-        fontSize='36px',
-        
-        textAnchor='middle'
-        alignmentBaseline="middle"
-      //- )
-      //-   | {year}
+
       g
         text(@if='label'
           x='{label.yAxis1.x}', y='{label.yAxis1.y}',
@@ -101,25 +77,17 @@ div(className='{styles.root}')
         path(@for='e in d2',
           d='{e.d}', fill='none', stroke='black')
         
-        //- )d='{d.pre}', fill='#07a8a7')
-        //- path(d='{d.reproductive}', fill='green')
-        //- path(d='{d.post}', fill='yellow')
-      //- Fragment(@if='d2')
-        path(d='{d2.pre}', fill='      Fragment(@if='d')
-        path(@for='e in d',
-          d='{e.d}', fill='green')')
-        path(d='{d2.reproductive}', fill='red')
-        path(d='{d2.post}', fill='#c54706')
+
       Fragment(@if='total')
 
         text(@for='(char, key, i) in total.menChars',
-          x='{box.left + (i * 20) + 11}', y='{915}',
+          x='{inner.left + (i * 20) + 11}', y='{915}',
           textAnchor='middle'
           alignmentBaseline="middle"
           ) {char}
 
         rect(@for='(char, key, i) in total.menChars',
-          x='{box.left + (i * 20)}', y='{915 - 11}',
+          x='{inner.left + (i * 20)}', y='{915 - 11}',
           width='{20}',
           height='{20}',
           fill='none',
@@ -147,9 +115,6 @@ div(className='{styles.root}')
         textAnchor='end'
       )
         | 평균 연령 = {average.men.text}    
-        //- text(x='{500}', y='{100}')
-          | {total.womenStr}
 
-        //- <text x="0" y="15" fill="red">I love SVG!</text>
 
   div(ref='{this.rootRef}')
