--- a/src/app/shared/components/Pyramid/pyramid.component.scss
+++ b/src/app/shared/components/Pyramid/pyramid.component.scss
@@ -1,10 +1,8 @@
 .root {
   position: relative;
-  font-weight: 700;
-  // font-family: Montserrat, 'Yeon Sung';
+  font-weight: 700; // font-family: Montserrat, 'Yeon Sung';
   // font-family: Montserrat, 'Stylish';
-  font-family: 'Stylish';
-  // font-family: 'Yeon Sung';
+  font-family: 'Stylish'; // font-family: 'Yeon Sung';
   // font-family: 'Cute Font';
   // @import url('https://fonts.googleapis.com/css?family=Cute+Font|Jua|Stylish|Yeon+Sung');
   img {
@@ -17,6 +15,21 @@
     position: absolute;
     top: 0;
     left: 0;
-    border: 1px solid red;
+    border: 1px solid red; // 차트를 감싸는 박스
+    .inner {
+      fill: none;
+      stroke: black;
+    }
+  }
+}
+
+:global(.theme2), :global(.theme3) {
+  .root {
+    svg {
+      // 차트를 감싸는 박스
+      .inner {
+        stroke: #fff;
+      }
+    }
   }
 }
