--- a/src/app/shared/components/Layout/Header/header.component.scss
+++ b/src/app/shared/components/Layout/Header/header.component.scss
@@ -17,6 +17,7 @@
         margin-top: 8px;
         margin-right: 12px;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
+        height: 56px;
       }
     }
   }
