--- a/src/app/shared/styles/common.scss
+++ b/src/app/shared/styles/common.scss
@@ -19,6 +19,6 @@ body {
 body {
   font-family: Montserrat, 'Black Han Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   // font-family: 'Yeon Sung';
-  // font-family: Stylish;
+  font-family: Stylish;
   font-size: 14px;
 }
