--- a/src/app/shared/components/Pyramid/pyramid.component.scss
+++ b/src/app/shared/components/Pyramid/pyramid.component.scss
@@ -15,7 +15,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    border: 1px solid red; // 차트를 감싸는 박스
+    // border: 1px solid red; // 차트를 감싸는 박스
     // .inner {
     //   fill: none;
     //   stroke: black;
