--- a/src/app/screens/Home/home.screen.pug
+++ b/src/app/screens/Home/home.screen.pug
@@ -6,7 +6,14 @@ div(className='{styles.root}')
       
       //- .container(ref='{clientRef}')
     .container
-      Pyramid(year='{2018}')
+      .row
+        .col-sm-9
+          Pyramid(year='{year}')
+        .col-sm-3
+          h2 {year}
+          input.form-control(type='number', defaultValue='{year}',
+            onChange='{handleYearChange}')
+
 
 
       //- .row
